--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ script:
 - export CMAKE_C_FLAGS="-O3 -fopenmp"
 - export CMAKE_CXX_FLAGS="-O3 -fopenmp"
 - echo 'if the following fails, use `cmake --debug-output ..` instead'
-- cmake .. -DQUICK_TEST=1
+- cmake .. -DENABLE_TEST=1 -DQUICK_TEST=1
 - make
 - echo 'cannot do `make test` right now'
 after_failure:
