--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,26 +17,27 @@ else ()
 endif (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.8)
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
-find_package(QUADMATH)
-if(QUADMATH_FOUND)
-  set(HAVE_QUADMATH_H 1 CACHE INTERNAL "Have QUADMATH")
-endif()
+#list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
+#find_package(QUADMATH)
+#if(QUADMATH_FOUND)
+#  set(HAVE_QUADMATH_H 1 CACHE INTERNAL "Have QUADMATH")
+#endif()
 
 find_package(BLAS REQUIRED)
+
+include(CheckFunctionExists)
 set(CMAKE_REQUIRED_INCLUDES math.h)
 set(CMAKE_REQUIRED_LIBRARIES m)
 check_function_exists(expl HAVE_EXPL)
 check_function_exists(sqrtl HAVE_SQRTL)
-#check_function_exists(fabsq HAVE_QUADMATH_H)
+set(CMAKE_REQUIRED_INCLUDES quadmath.h)
+set(CMAKE_REQUIRED_LIBRARIES quadmath)
+check_function_exists(fabsq HAVE_QUADMATH_H)
 
 include_directories(
   ${PROJECT_BINARY_DIR}/include
   ${PROJECT_SOURCE_DIR}/src
   ${PROJECT_BINARY_DIR}/src)
-if(QUADMATH_FOUND)
-  include_directories(${QUADMATH_INCLUDE_DIR})
-endif()
 
 configure_file(
   "${PROJECT_SOURCE_DIR}/src/config.h.in"
@@ -74,8 +75,8 @@ set_target_properties(cint PROPERTIES
   VERSION ${cint_VERSION}
   LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 target_link_libraries(cint ${BLAS_LIBRARIES})
-if(QUADMATH_FOUND)
-  target_link_libraries(cint ${QUADMATH_LIBRARY})
+if(HAVE_QUADMATH_H)
+  target_link_libraries(cint quadmath)
 endif()
 
 install(TARGETS cint DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
@@ -83,6 +84,12 @@ install(FILES ${PROJECT_BINARY_DIR}/include/cint.h DESTINATION ${CMAKE_INSTALL_P
 
 if(ENABLE_EXAMPLE)
   enable_language(Fortran)
+  find_package(OpenMP)
+  if(OPENMP_FOUND)
+    set(HAVE_OPENMP 1)
+  else ()
+    set(OpenMP_C_FLAGS " ")
+  endif()
   add_subdirectory(examples)
 endif()
 
