Fix #20. The compatibility to g++ compiler

--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -102,8 +102,6 @@ typedef struct {
 } CINTOpt;
 #endif
 
-#include <complex.h>
-
 FINT CINTlen_cart(const FINT l);
 FINT CINTlen_spinor(const FINT bas_id, const FINT *bas);
 
@@ -128,14 +126,6 @@ void CINTshells_spinor_offset(FINT ao_loc[], const FINT *bas, const FINT nbas);
 double *CINTc2s_bra_sph(double *sph, FINT nket, double *cart, FINT l);
 double *CINTc2s_ket_sph(double *sph, FINT nket, double *cart, FINT l);
 double *CINTc2s_ket_sph1(double *sph, double *cart, FINT lds, FINT ldc, FINT l);
-void CINTc2s_ket_spinor_sf1(double complex *gspa, double complex *gspb, double *gcart,
-                            FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
-void CINTc2s_iket_spinor_sf1(double complex *gspa, double complex *gspb, double *gcart,
-                             FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
-void CINTc2s_ket_spinor_si1(double complex *gspa, double complex *gspb, double *gcart,
-                            FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
-void CINTc2s_iket_spinor_si1(double complex *gspa, double complex *gspb, double *gcart,
-                             FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
 
 
 double CINTgto_norm(FINT n, double a);
@@ -168,3 +158,15 @@ FINT cint2e(double *opijkl, const FINT *shls,
 void cint2e_optimizer(CINTOpt **opt, const FINT *atm, const FINT natm,
                       const FINT *bas, const FINT nbas, const double *env);
 
+#ifndef __cplusplus
+#include <complex.h>
+
+void CINTc2s_ket_spinor_sf1(double complex *gspa, double complex *gspb, double *gcart,
+                            FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
+void CINTc2s_iket_spinor_sf1(double complex *gspa, double complex *gspb, double *gcart,
+                             FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
+void CINTc2s_ket_spinor_si1(double complex *gspa, double complex *gspb, double *gcart,
+                            FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
+void CINTc2s_iket_spinor_si1(double complex *gspa, double complex *gspb, double *gcart,
+                             FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
+#endif
