Honour CMAKE_BUILD_TYPE on the cmake commandline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ project (cint)
 set(cint_VERSION "3.0")
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -DNDEBUG")
-set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
+if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
+  set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
+endif()
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
 if (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.8)
