Use cmake policy for OSX rpath

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,15 @@ if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
 endif()
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
-if (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.8)
-  include(GNUInstallDirs)
-elseif (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} EQUAL 2.8 AND
-    ${CMAKE_PATCH_VERSION} GREATER 4)
+if (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION} VERSION_GREATER 2.8.3)
+  if (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION} VERSION_GREATER 3.0.0)
+    cmake_policy(SET CMP0042 NEW) 
+  endif()
   include(GNUInstallDirs)
 else ()
   set(CMAKE_INSTALL_LIBDIR lib CACHE PATH "lib")
   set(CMAKE_INSTALL_INCLUDEDIR include CACHE PATH "include")
-endif (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.8)
+endif ()
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
