CMake refactor: adhere to Modern CMake standards.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,137 +1,157 @@
-cmake_minimum_required (VERSION 2.6)
-project (cint C)
-set(cint_SOVERSION "3")
-set(cint_VERSION "3.0.17")
+cmake_minimum_required (VERSION 3.13 FATAL_ERROR)
+project (Cint VERSION 3.0.17 LANGUAGES C)
 
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -DNDEBUG")
-if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
-  set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
-endif()
-set(CMAKE_VERBOSE_MAKEFILE OFF)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
-if (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION} VERSION_GREATER 2.8.3)
-  if (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION} VERSION_GREATER 3.0.0)
-    cmake_policy(SET CMP0042 NEW) 
-  endif()
-  include(GNUInstallDirs)
-else ()
-  set(CMAKE_INSTALL_LIBDIR lib CACHE PATH "lib")
-  set(CMAKE_INSTALL_INCLUDEDIR include CACHE PATH "include")
-endif ()
-#set(CMAKE_INCLUDE_CURRENT_DIR ON)
+add_library(Cint SHARED "")
 
-list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
-find_package(QUADMATH)
-if(QUADMATH_FOUND)
-  set(HAVE_QUADMATH_H 1 CACHE INTERNAL "Have QUADMATH")
-endif()
+# Supported options
+# -----------------
+option(WITH_RANGE_COULOMB "Range separated Coulomb" OFF)
+option(WITH_COULOMB_ERF " " OFF)
+option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+option(ENABLE_EXAMPLE "build examples" OFF)
+option(ENABLE_TEST "build tests" OFF)
+option(QUICK_TEST "Quick tests" OFF)
+
+# Look for supporting libraries
+# -----------------------------
 
 find_package(BLAS REQUIRED)
+find_package(QUADMATH)
 
-include(CheckFunctionExists)
-set(CMAKE_REQUIRED_INCLUDES math.h)
-set(CMAKE_REQUIRED_LIBRARIES m)
-check_function_exists(expl HAVE_EXPL)
-check_function_exists(sqrtl HAVE_SQRTL)
-#set(CMAKE_REQUIRED_INCLUDES quadmath.h)
-#set(CMAKE_REQUIRED_LIBRARIES quadmath)
-#check_function_exists(fabsq HAVE_QUADMATH_H)
+# Setup library
+# -------------
 
-include_directories(
-  ${PROJECT_BINARY_DIR}/include
-  ${PROJECT_SOURCE_DIR}/src
-  ${PROJECT_BINARY_DIR}/src)
+add_subdirectory(src)
+add_subdirectory(include)
 
-configure_file(
-  "${PROJECT_SOURCE_DIR}/src/config.h.in"
-  "${PROJECT_BINARY_DIR}/src/config.h")
+configure_file(cmake/cint.h.in include/cint/cint.h)
+configure_file(cmake/config.h.in include/config.h)
 
-configure_file(
-  "${PROJECT_SOURCE_DIR}/include/cint.h.in"
-  "${PROJECT_BINARY_DIR}/include/cint.h")
+target_include_directories(Cint
+	PUBLIC
+	$<INSTALL_INTERFACE:include>
+	$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+	$<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
+	PRIVATE
+	${CMAKE_SOURCE_DIR}/src>
+	)
 
-set(cintSrc 
-  src/c2f.c src/cart2sph.c src/cint1e.c src/cint2e.c src/cint_bas.c
-  src/fblas.c src/g1e.c src/g2e.c src/misc.c src/optimizer.c
-  src/rys_roots.c
-  src/cint2c2e.c src/g2c2e.c src/cint3c2e.c src/g3c2e.c
-  src/cint3c1e.c src/g3c1e.c src/breit.c src/cint4c1e.c src/g4c1e.c
-  src/cint1e_a.c src/cint3c1e_a.c
-  src/autocode/breit1.c src/autocode/dkb.c src/autocode/gaunt1.c
-  src/autocode/grad1.c src/autocode/grad2.c src/autocode/hess.c
-  src/autocode/int3c1e.c src/autocode/int3c2e.c src/autocode/intor1.c
-  src/autocode/intor2.c src/autocode/intor3.c src/autocode/intor4.c)
+target_include_directories(Cint PUBLIC $<BUILD_INTERFACE:${BLAS_INCLUDE_DIR}>)
+target_link_libraries(Cint PUBLIC ${BLAS_LIBRARIES})
 
-#option(WITH_RANGE_COULOMB "Range separated Coulomb" on)
-if(WITH_RANGE_COULOMB)
-# defined in config.h
-#  add_definitions(-DWITH_RANGE_COULOMB)
-  message("Enabled WITH_RANGE_COULOMB")
-endif(WITH_RANGE_COULOMB)
+set_target_properties(Cint PROPERTIES
+   ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
+   LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
+   RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+   )
 
-if(WITH_COULOMB_ERF)
-  set(cintSrc ${cintSrc} src/g2e_coulerf.c src/cint2e_coulerf.c)
-  add_definitions(-DWITH_COULOMB_ERF)
-  message("Enabled WITH_COULOMB_ERF")
-endif(WITH_COULOMB_ERF)
+# Install the library (relative to the CMAKE_INSTALL_PREFIX)
+# ----------------------------------------------------------
 
-if(WITH_F12)
-  set(cintSrc ${cintSrc} src/g2e_f12.c src/stg_roots.c src/cint2e_f12.c)
-  add_definitions(-DWITH_F12)
-  message("Enabled WITH_F12")
-endif(WITH_F12)
+include(GenerateExportHeader)
+generate_export_header(Cint
+   EXPORT_MACRO_NAME CINT_API
+   EXPORT_FILE_NAME ${CMAKE_BINARY_DIR}/include/cint.h
+   )
 
-if(WITH_GTG)
-  set(cintSrc ${cintSrc} src/g2e_gtg.c src/cint2e_gtg.c src/cint3c2e_gtg.c
-    src/cint2c2e_gtg.c)
-  add_definitions(-DWITH_GTG)
-  message("Enabled WITH_GTG")
-endif(WITH_GTG)
+include(GNUInstallDirs)
 
-option(BUILD_SHARED_LIBS "build shared libraries" 1)
-option(ENABLE_EXAMPLE "build examples" 0)
-option(ENABLE_TEST "build tests" 0)
-option(ENABLE_STATIC "Enforce static library build" 0)
+install(TARGETS Cint
+    EXPORT Cint-targets
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION ${BLAS_INCLUDE_DIR}
+)
+
+install(DIRECTORY ${CMAKE_BINARY_DIR}/include/cint/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+
+install(EXPORT Cint-targets
+	FILE Cint-targets.cmake
+	NAMESPACE Cint::
+	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Cint
+	)
+
+# Configure package
+# -----------------
+
+include(CmakePackageConfigHelpers)
+
+configure_package_config_file(
+    ${CMAKE_SOURCE_DIR}/cmake/Cint-config.cmake.in
+    ${CMAKE_BINARY_DIR}/cmake/Cint-config.cmake
+    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Cint
+)
+
+write_basic_package_version_file(
+    ${CMAKE_BINARY_DIR}/cmake/Cint-config-version.cmake
+    VERSION ${CINT_VERSION}
+    COMPATIBILITY AnyNewerVersion
+)
+
+install(
+    FILES
+        ${CMAKE_BINARY_DIR}/cmake/Cint-config.cmake
+        ${CMAKE_BINARY_DIR}/cmake/Cint-config-version.cmake
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Cint
+)
+
+# Parse additional options
+# ------------------------
+
+# #option(WITH_RANGE_COULOMB "Range separated Coulomb" on)
+# if(WITH_RANGE_COULOMB)
+# # defined in config.h
+# #  add_definitions(-DWITH_RANGE_COULOMB)
+#   message("Enabled WITH_RANGE_COULOMB")
+# endif(WITH_RANGE_COULOMB)
+
+# if(WITH_COULOMB_ERF)
+#   set(cintSrc ${cintSrc} src/g2e_coulerf.c src/cint2e_coulerf.c)
+#   add_definitions(-DWITH_COULOMB_ERF)
+#   message("Enabled WITH_COULOMB_ERF")
+# endif(WITH_COULOMB_ERF)
+
+# if(WITH_F12)
+#   set(cintSrc ${cintSrc} src/g2e_f12.c src/stg_roots.c src/cint2e_f12.c)
+#   add_definitions(-DWITH_F12)
+#   message("Enabled WITH_F12")
+# endif(WITH_F12)
+
+# if(WITH_GTG)
+#   set(cintSrc ${cintSrc} src/g2e_gtg.c src/cint2e_gtg.c src/cint3c2e_gtg.c
+#     src/cint2c2e_gtg.c)
+#   add_definitions(-DWITH_GTG)
+#   message("Enabled WITH_GTG")
+# endif(WITH_GTG)
+
+
 if(QUICK_TEST)
   set(RUN_QUICK_TEST --quick)
 endif()
 
-if(ENABLE_STATIC)
-  set(BUILD_SHARED_LIBS 0)
-endif()
 
-add_library(cint ${cintSrc})
-set_target_properties(cint PROPERTIES
-  VERSION ${cint_VERSION}
-  SOVERSION ${cint_SOVERSION}
-  LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
-target_link_libraries(cint ${BLAS_LIBRARIES})
-if(QUADMATH_FOUND)
-  target_link_libraries(cint quadmath)
-endif()
-
-install(TARGETS cint DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
-install(FILES ${PROJECT_BINARY_DIR}/include/cint.h DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR})
-
-if(ENABLE_EXAMPLE)
-  enable_language(Fortran)
-  find_package(OpenMP)
-  if(OPENMP_FOUND)
-    set(HAVE_OPENMP 1)
-  else ()
-    set(OpenMP_C_FLAGS " ")
-  endif()
-  add_subdirectory(examples)
-endif()
+# if(ENABLE_EXAMPLE)
+#   enable_language(Fortran)
+#   find_package(OpenMP)
+#   if(OPENMP_FOUND)
+#     set(HAVE_OPENMP 1)
+#   else ()
+#     set(OpenMP_C_FLAGS " ")
+#   endif()
+#   add_subdirectory(examples)
+# endif()
 
 if(BUILD_SHARED_LIBS AND ENABLE_TEST)
-  find_package(PythonInterp)
-  message(STATUS "Found python  ${PYTHON_EXECUTABLE}")
-  if(PYTHONINTERP_FOUND)
-    enable_testing()
-    add_test(NAME cinttest
-      COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testsuite/test_cint.py ${RUN_QUICK_TEST})
-    add_test(NAME cint3c2etest
-      COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testsuite/test_3c2e.py ${RUN_QUICK_TEST})
-  endif()
+	find_package(PythonInterp)
+	message(STATUS "Found python  ${PYTHON_EXECUTABLE}")
+	if(PYTHONINTERP_FOUND)
+ 	enable_testing()
+ 	add_test(NAME cinttest
+   		COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testsuite/test_cint.py ${RUN_QUICK_TEST})
+	add_test(NAME cint3c2etest
+   		COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testsuite/test_3c2e.py ${RUN_QUICK_TEST})
+	endif()
 endif()
