Bug fix: make sure that library and cmake-config are installed in same directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ install(TARGETS Cint
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
     RUNTIME DESTINATION bin
-    INCLUDES DESTINATION ${BLAS_INCLUDE_DIR}
+	INCLUDES DESTINATION include
 )
 
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include/cint/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
@@ -77,7 +77,7 @@ install(DIRECTORY ${CMAKE_BINARY_DIR}/include/cint/ DESTINATION ${CMAKE_INSTALL_
 install(EXPORT Cint-targets
 	FILE Cint-targets.cmake
 	NAMESPACE Cint::
-	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Cint
+	DESTINATION lib/cmake/Cint
 	)
 
 # Configure package
@@ -88,7 +88,7 @@ include(CMakePackageConfigHelpers)
 configure_package_config_file(
     ${CMAKE_SOURCE_DIR}/cmake/Cint-config.cmake.in
     ${CMAKE_BINARY_DIR}/cmake/Cint-config.cmake
-    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Cint
+    INSTALL_DESTINATION lib/cmake/Cint
 )
 
 write_basic_package_version_file(
@@ -101,7 +101,7 @@ install(
     FILES
         ${CMAKE_BINARY_DIR}/cmake/Cint-config.cmake
         ${CMAKE_BINARY_DIR}/cmake/Cint-config-version.cmake
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Cint
+    DESTINATION lib/cmake/Cint
 )
 
 # Parse additional options
