Bug fix: C compiler instead of CXX compiler used.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,9 @@ find_package(QUADMATH)
 
 target_compile_options(Cint PUBLIC -m64 -pipe)
 target_compile_options(Cint PUBLIC "$<IF:$<CONFIG:Debug>,-g,-O2>")
-target_compile_options(Cint PUBLIC "$<IF:$<CXX_COMPILER_ID:Intel>,-xHost,-march=native>")
-target_compile_options(Cint PUBLIC "$<$<CXX_COMPILER_ID:GNU>:-pthread>")
-target_link_options(Cint PUBLIC "$<$<CXX_COMPILER_ID:GNU>:-pthread>")
+target_compile_options(Cint PUBLIC "$<IF:$<C_COMPILER_ID:Intel>,-xHost,-march=native>")
+target_compile_options(Cint PUBLIC "$<$<C_COMPILER_ID:GNU>:-pthread>")
+target_link_options(Cint PUBLIC "$<$<C_COMPILER_ID:GNU>:-pthread>")
 
 add_subdirectory(src)
 add_subdirectory(include)
