--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2013-  Qiming Sun <osirpt.sun@gmail.com>
  *
- * Parameters and function prototypes for libcint.
+ * Parameters and function signature for libcint.
  */
 
 #define CINT_VERSION    @cint_VERSION@
