Update version tag

--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -31,6 +31,7 @@
 #define PTR_COORD       1
 #define NUC_MOD_OF      2
 #define PTR_ZETA        3
+#define PTR_FRAC_CHARGE 3
 #define RESERVE_ATMLOT1 4
 #define RESERVE_ATMLOT2 5
 #define ATM_SLOTS       6
