Added some support for packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required (VERSION 2.6)
 project (cint C)
-set(cint_SOVERSION "3")
-set(cint_VERSION "3.0.20")
+set(cint_VERSION_MAJOR "3")
+set(cint_VERSION_MINOR "0")
+set(cint_VERSION_PATCH "20")
+set(cint_VERSION_TWEAK "0")
+set(cint_VERSION "${cint_VERSION_MAJOR}.${cint_VERSION_MINOR}.${cint_VERSION_PATCH}")
+set(cint_SOVERSION "${cint_VERSION_MAJOR}")
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -DNDEBUG")
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
@@ -139,3 +143,30 @@ if(BUILD_SHARED_LIBS AND ENABLE_TEST)
       COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testsuite/test_3c2e.py ${RUN_QUICK_TEST})
   endif()
 endif()
+
+
+set(CPACK_PACKAGE_CHECKSUM "SHA512")
+set(CPACK_GENERATOR "DEB")
+set(CPACK_DEBIAN_COMPRESSION_TYPE "xz")
+set(CPACK_PACKAGE_VENDOR "Qiming @sunqm Sun")
+set(CPACK_PACKAGE_CONTACT "https://github.com/sunqm/libcint")
+set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/sunqm/libcint")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
+set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README")
+set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/doc/libcint.CPack.txt")
+
+set(CPACK_DEBIAN_PACKAGE_NAME "libcint")
+set(CPACK_PACKAGE_VERSION_MAJOR "${cint_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${cint_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${cint_VERSION_PATCH}")
+set(CPACK_PACKAGE_VERSION_TWEAK "${cint_VERSION_TWEAK}")
+
+set(CPACK_COMPONENTS_GROUPING "IGNORE")
+
+set(CPACK_MONOLITHIC_INSTALL OFF)
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libopenblas0-pthread")
+if(HAVE_QUADMATH)
+	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libquadmath0")
+endif()
+
+include(CPack)
