Splitted the package into 2: the headers and the lib.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,11 +115,11 @@ if(QUADMATH_FOUND)
 endif()
 target_link_libraries(cint "-lm")
 
-install(TARGETS cint DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
+install(TARGETS cint DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" COMPONENT "lib")
 set(CintHeaders
   ${PROJECT_SOURCE_DIR}/include/cint_funcs.h
   ${PROJECT_BINARY_DIR}/include/cint.h)
-install(FILES ${CintHeaders} DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES ${CintHeaders} DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR} COMPONENT "dev")
 
 if(ENABLE_EXAMPLE)
   enable_language(Fortran)
@@ -144,6 +144,7 @@ if(BUILD_SHARED_LIBS AND ENABLE_TEST)
   endif()
 endif()
 
+include(CPackComponent)
 
 set(CPACK_PACKAGE_CHECKSUM "SHA512")
 set(CPACK_GENERATOR "DEB")
@@ -155,7 +156,6 @@ set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/doc/libcint.CPack.txt")
 
-set(CPACK_DEBIAN_PACKAGE_NAME "libcint")
 set(CPACK_PACKAGE_VERSION_MAJOR "${cint_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${cint_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${cint_VERSION_PATCH}")
@@ -164,9 +164,19 @@ set(CPACK_PACKAGE_VERSION_TWEAK "${cint_VERSION_TWEAK}")
 set(CPACK_COMPONENTS_GROUPING "IGNORE")
 
 set(CPACK_MONOLITHIC_INSTALL OFF)
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "libopenblas0-pthread")
+set(CPACK_DEB_COMPONENT_INSTALL ON)
+set(CPACK_RPM_COMPONENT_INSTALL ON)
+set(CPACK_NSIS_COMPONENT_INSTALL ON)
+
+set("CPACK_DEBIAN_LIB_PACKAGE_NAME" "libcint")
+set("CPACK_DEBIAN_DEV_PACKAGE_NAME" "${CPACK_DEBIAN_LIB_PACKAGE_NAME}-dev")
+
+set(CPACK_DEBIAN_LIB_PACKAGE_DEPENDS "libopenblas0-pthread")
+set(CPACK_DEBIAN_DEV_PACKAGE_DEPENDS "${CPACK_DEBIAN_LIB_PACKAGE_NAME},libopenblas-pthread-dev")
 if(HAVE_QUADMATH)
-	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libquadmath0")
+	set(CPACK_DEBIAN_LIB_PACKAGE_DEPENDS "${CPACK_DEBIAN_LIB_PACKAGE_DEPENDS},libquadmath0")
 endif()
+
+set(CPACK_COMPONENTS_GROUPING "IGNORE")
 
 include(CPack)
