--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 project (cint C)
 set(cint_VERSION_MAJOR "3")
-set(cint_VERSION_MINOR "0")
-set(cint_VERSION_PATCH "20")
+set(cint_VERSION_MINOR "1")
+set(cint_VERSION_PATCH "0")
 set(cint_VERSION_TWEAK "0")
 set(cint_VERSION "${cint_VERSION_MAJOR}.${cint_VERSION_MINOR}.${cint_VERSION_PATCH}")
 set(cint_SOVERSION "${cint_VERSION_MAJOR}")
@@ -91,6 +91,11 @@ if(WITH_GTG)
   add_definitions(-DWITH_GTG)
   message("Enabled WITH_GTG")
 endif(WITH_GTG)
+
+if(PYPZPX)
+  add_definitions(-DPYPZPX)
+  message("P orbitals are sorted to (py, pz, px)")
+endif(PYPZPX)
 
 option(BUILD_SHARED_LIBS "build shared libraries" 1)
 option(ENABLE_EXAMPLE "build examples" 0)
