--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 project (cint C)
 set(cint_VERSION_MAJOR "3")
 set(cint_VERSION_MINOR "1")
-set(cint_VERSION_PATCH "0")
+set(cint_VERSION_PATCH "1")
 set(cint_VERSION_TWEAK "0")
 set(cint_VERSION "${cint_VERSION_MAJOR}.${cint_VERSION_MINOR}.${cint_VERSION_PATCH}")
 set(cint_SOVERSION "${cint_VERSION_MAJOR}")
@@ -94,8 +94,26 @@ endif(WITH_GTG)
 
 if(PYPZPX)
   add_definitions(-DPYPZPX)
-  message("P orbitals are sorted to (py, pz, px)")
+  message("P orbitals convention (py, pz, px)")
+else()
+  message("P orbitals convention (px, py, pz)")
 endif(PYPZPX)
+
+option(WITH_FORTRAN "Fortran interface" on)
+if(WITH_FORTRAN)
+  add_definitions(-DWITH_FORTRAN)
+  message("Enable Fortran interface")
+else()
+  message("Exclude Fortran interface")
+endif(WITH_FORTRAN)
+
+option(WITH_CINT2_INTERFACE "Old libcint (version 2) interface" on)
+if(WITH_CINT2_INTERFACE)
+  add_definitions(-DWITH_CINT2_INTERFACE)
+  message("Enable old cint (version 2) interface")
+else()
+  message("Exclude old cint (version 2) interface")
+endif(WITH_CINT2_INTERFACE)
 
 option(BUILD_SHARED_LIBS "build shared libraries" 1)
 option(ENABLE_EXAMPLE "build examples" 0)
